   Fix adding the filetype's default extension when using the
   Instant Save plugin (closes #2885142).
 * src/main.c:
   Before looking for line and column numbers specified as part
   of a filename, ensure the file doesn't exist on disk. This allows
   opening of files like "test:0".
 * src/sidebar.c:
   Rename "select" variables into "selection" to avoid shadowed names.


2009-10-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.h, src/prefs.c, src/keyfile.c,
   src/main.c, src/ui_utils.c, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add sidebar position interface pref.


2009-10-23  Lex Trotman  <elextr.at.gmail.dot.com>

 * doc/geany.txt, doc/geany.html:
   Add missing underscores to links.


2009-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Move line(s) up/down' keybindings.


2009-10-22  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c, src/build.h, src/filetypes.h:
   Include code for project filetype execute commands and fix bug in
   saving project filetypes list.
 * src/project.c, src/build.c, doc/geany.txt:
   Make non-project execute configuration save to filetypes not geany.conf.
   Fix closing of project failing to remove build commands dialog entry.


2009-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/project.c, src/ui_utils.c:
   Set border width for project properties build table.
 * geany.glade, src/interface.c:
   Don't expand hard tab width alignment.


2009-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/filetypes.c, src/document.c, src/symbols.c,
   doc/geany.txt, doc/geany.html:
   Support loading global tags files for custom filetypes.
 * src/keybindings.c, src/keybindings.h, src/editor.c, src/editor.h,
   doc/geany.txt, doc/geany.html:
   Add 'Word part completion' keybinding so keys other than Tab can be